# pyEQL

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README  README.md  __init__.py  activity_correction.py  chemical_formula.py  cibuildwheel.toml  database.py  paper.bib  paper.md  parameter.py  pint_custom_units.txt  pyEQL.py  pyproject.toml  requirements.txt  salt_ion_match.py  setup.cfg  setup.py  tox.ini  water_properties.py
.github/: dependabot.yml  pull_request_template.md
database/: SMILES.csv  TCPC_parameters.csv  pitzer_activity.csv  template.csv
docs/: amounts.md  arithmetic.md  chemistry.md  chemistry.rst  class_solute.rst  (+28 more)
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/: CMakeLists.txt
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/database/: CMakeLists.txt  Makefile.in
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/doc/: CMakeLists.txt
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/doc/html/: IPhreeqc_8h.html  IPhreeqc_8hpp_source.html  classIPhreeqc.html  structVAR.html
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/: CMakeLists.txt  Makefile.am  Makefile.in
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/c/advect/: CMakeLists.txt  CMakeLists.txt.in
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/com/: CMakeLists.txt
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/com/excel/: CMakeLists.txt  withcallback.xls
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/com/python/: CMakeLists.txt  parallel_advect.py
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/cpp/advect/: CMakeLists.txt.in
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/fortran/advect/: CMakeLists.txt.in
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/examples/using-cmake/: CMakeLists.txt  post-install.cmake.in
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/gtest/: Makefile.am  Makefile.in  TestCVar.cpp  TestIPhreeqc.cpp  phreeqc.dat.90a6449
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/src/: CSelectedOutput.hxx  IPhreeqc.cpp  IPhreeqcF.f  IPhreeqc_interface_F.cpp  IPhreeqc_interface_F.h  Makefile.in  Var.c  Var.h  Version.h  fwrap.h  fwrap3.cpp  fwrap4.cpp  fwrap5.cpp  fwrap6.cpp  fwrap7.cpp
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/src/phreeqcpp/: CurveObject.cpp  ExchComp.h  GasComp.cxx  GasComp.h  PPassemblageComp.cxx  Phreeqc.h  Reaction.cxx  SSassemblage.cxx  SelectedOutput.cpp  SolutionIsotope.cxx  StorageBin.cxx  Surface.h  SurfaceCharge.cxx  SurfaceComp.cxx  Use.h  basicsubs.cpp  cl1.cpp  dense.cpp  global_structures.h  input.cpp  inverse.cpp  nvector.cpp  phqalloc.cpp  prep.cpp  read.cpp  runner.cpp  step.cpp  structures.cpp  sundialsmath.h  tally.cpp
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/src/phreeqcpp/common/: PHRQ_base.cxx  PHRQ_base.h
src/pyEQL/phreeqc/ext/iphreeqc-3.8.6-17100/tests/: Makefile.in  main.f90  phreeqc.dat.in  test_c.c  test_cxx.cxx  test_f90.F90
src/pyEQL/pyEQL-phreeqc/: CMakeLists.txt  bindings.cpp  pyproject.toml
src/pyEQL/pyEQL-phreeqc/ext/: README.md
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/: IPhreeqcConfig.cmake.in  Makefile.am  Makefile.in  configure  configure.ac  resource.h
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/database/: Makefile.am
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/doc/: Makefile.am  Makefile.in  NOTICE  README  RELEASE
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/doc/html/: IPhreeqc_8h_source.html  IPhreeqc_8hpp.html  Var_8h.html  Var_8h_source.html  classIPhreeqcStop.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/c/advect/: README.txt  advect.c
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/com/: README.txt
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/com/excel/: runphreeqc.xls
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/com/python/: Gypsum.py
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/cpp/advect/: CMakeLists.txt  README.txt  advect.cpp  ic
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/fortran/: CMakeLists.txt
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/fortran/advect/: CMakeLists.txt  README.txt  advect.F90  ic
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/examples/using-cmake/: CMakeLists.txt.in  README.txt  main.cpp
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/gtest/: CMakeLists.txt  FileTest.cpp  FileTest.h  TestIPhreeqcLib.cpp  TestSelectedOutput.cpp  TestVar.cpp  conv_fail.in  dump  kinn20140218  multi_punch  multi_punch_no_set
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/src/: CSelectedOutput.cpp  CVar.hxx  Debug.h  ErrorReporter.hxx  IPhreeqc.f.inc  IPhreeqc.f90.inc  IPhreeqc.h  IPhreeqc.hpp  IPhreeqcCallbacks.h  IPhreeqcLib.cpp  IPhreeqc_interface.F90  Makefile.am  README.Fortran  fimpl.h  fwrap.cpp  fwrap1.cpp  fwrap2.cpp  fwrap8.cpp  thread.h
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/src/phreeqcpp/: ChartHandler.cpp  ChartObject.cpp  ChartObject.h  Dictionary.cpp  ExchComp.cxx  Exchange.cxx  Form1.h  GasPhase.cxx  GasPhase.h  ISolution.cxx  ISolution.h  ISolutionComp.cxx  KineticsComp.cxx  NameDouble.cxx  NameDouble.h  NumKeyword.cxx  PBasic.cpp  PBasic.h  PHRQ_io_output.cpp  PPassemblage.cxx  Phreeqc.cpp  Pressure.cxx  ReadClass.cxx  SS.cxx  SScomp.cxx  Serializer.cxx  Solution.cxx  Solution.h  SolutionIsotope.h  StorageBinList.cpp  Surface.cxx  SurfaceCharge.h  System.cxx  Temperature.cxx  Use.cpp  UserPunch.cpp  UserPunch.h  advection.cpp  cvdense.cpp  cvode.cpp  (+24 more)
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/src/phreeqcpp/PhreeqcKeywords/: Keywords.cpp  Keywords.h
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/src/phreeqcpp/common/: PHRQ_exports.h  PHRQ_io.cpp  PHRQ_io.h  Parser.cxx  Parser.h  Utils.cxx  Utils.h
src/pyEQL/pyEQL-phreeqc/ext/iphreeqc-3.8.6-17100/tests/: CMakeLists.txt  Makefile.am  main77.f  main_fortran.cxx
src/pyEQL/pyEQL-phreeqc/pyEQL_phreeqc/: __init__.py  core.py  solution.py  var.py
(+292 files in other folders)
